[package]
name = "libsecp256k1"
description = "Pure Rust secp256k1 implementation."
license = "Apache-2.0"
version = "0.4.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/paritytech/libsecp256k1"
keywords = ["crypto", "ECDSA", "secp256k1", "bitcoin", "no_std"]
edition = "2018"

[dependencies]
libsecp256k1-core = { version = "0.1.0", path = "core", default-features = false }
arrayref = "0.3"
rand = { version = "0.7", default-features = false }
digest = "0.8"
base64 = { version = "0.11.0", default-features = false }
hmac-drbg = { version = "0.2", optional = true }
sha2 = { version = "0.8", optional = true, default-features = false }
typenum = { version = "1.11", optional = true }
serde = { version = "1.0.104", features = ["derive"], default-features = false }

[dev-dependencies]
secp256k1-test = "0.7"
clear_on_drop = "0.2"
rand-test = { package = "rand", version = "0.4" }
serde_json = "1.0"
hex-literal = "0.2.1"

[build-dependencies]
libsecp256k1-gen-ecmult = { version = "0.1.0", path = "gen/ecmult" }
libsecp256k1-gen-genmult = { version = "0.1.0", path = "gen/genmult" }

[features]
default = ["std", "hmac", "static-context"]
std = ["libsecp256k1-core/std", "sha2/std", "rand/std", "serde/std", "base64/std"]
hmac = ["hmac-drbg", "sha2", "typenum"]
static-context = []

[workspace]
members = [
  "./gen/ecmult",
  "./gen/genmult",
]
